--- a/index.html
+++ b/index.html
@@ -115,6 +115,72 @@
   </section>
 
   <!-- portfolio section design -->
+  <section class="portfolio" id="portfolio"></section>
+   <h2 class="heading">Latest <span>Projects</span></h2>
+
+   <div class="portfolio-container">
+    <div class="portfolio-box">
+      <img src="./images/portfolio-1.png" alt="">
+      <div class="portfolio-layer">
+        <h4>Web Design</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+           voluptatibus aliquam totam doloribus quam.
+        </p>
+        <a href="#"><i class='bx bx-link-external'></i></a>
+      </div>
+      
+   <div class="portfolio-container">
+    <div class="portfolio-box">
+      <img src="./images/portfolio-2.png" alt="">
+      <div class="portfolio-layer">
+        <h4>Web Design</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+           voluptatibus aliquam totam doloribus quam.
+        </p>
+        <a href="#"><i class='bx bx-link-external'></i></a>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="./images/portfolio-3.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+             voluptatibus aliquam totam doloribus quam.
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="./images/portfolio-4.png" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+               voluptatibus aliquam totam doloribus quam.
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+
+          <div class="portfolio-box">
+            <img src="./images/portfolio-5.png" alt="">
+            <div class="portfolio-layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+                 voluptatibus aliquam totam doloribus quam.
+              </p>
+              <a href="#"><i class='bx bx-link-external'></i></a>
+            </div>
+
+            <div class="portfolio-box">
+              <img src="./images/portfolio-6.png" alt="">
+              <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
+                   voluptatibus aliquam totam doloribus quam.
+                </p>
+                <a href="#"><i class='bx bx-link-external'></i></a>
+              </div>
+    </div>
+   </div>
 
   <!-- contact section design -->
 
