--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </p>
         <a href="#"><i class='bx bx-link-external'></i></a>
       </div>
-      
+
    <div class="portfolio-container">
     <div class="portfolio-box">
       <img src="./images/portfolio-2.png" alt="">
@@ -183,6 +183,25 @@
    </div>
 
   <!-- contact section design -->
+  <section class="contact" id="id">
+    <h2 class="heading">Contact Me!</h2>
+
+    <form action="#">
+      <div class="input-box">
+        <input type="text" name ="" id="" placeholder="Full Name">
+        <input type="text" name ="" id="" placeholder="Email Address">
+      </div>
+
+      <div class="input-box">
+        <input type="text" name ="" id="" placeholder="Cell Number">
+        <input type="text" name ="" id="" placeholder="Email Subject">
+      </div>
+      <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
+      input 
+      <input type="text" class="btn">
+    </form>
+    </form>
+  </section>
 
   <!-- footer design -->
 
