--- a/index.html
+++ b/index.html
@@ -115,72 +115,85 @@
   </section>
 
   <!-- portfolio section design -->
-  <section class="portfolio" id="portfolio"></section>
-   <h2 class="heading">Latest <span>Projects</span></h2>
+  <section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span>Projects</span></h2>
 
-   <div class="portfolio-container">
-    <div class="portfolio-box">
-      <img src="./images/portfolio-1.png" alt="">
-      <div class="portfolio-layer">
-        <h4>Web Design</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-           voluptatibus aliquam totam doloribus quam.
-        </p>
-        <a href="#"><i class='bx bx-link-external'></i></a>
-      </div>
-
-   <div class="portfolio-container">
-    <div class="portfolio-box">
-      <img src="./images/portfolio-2.png" alt="">
-      <div class="portfolio-layer">
-        <h4>Web Design</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-           voluptatibus aliquam totam doloribus quam.
-        </p>
-        <a href="#"><i class='bx bx-link-external'></i></a>
-      </div>
+    <div class="portfolio-container">
 
       <div class="portfolio-box">
-        <img src="./images/portfolio-3.png" alt="">
+        <img src="./images/portfolio-1.png" alt="" />
         <div class="portfolio-layer">
           <h4>Web Design</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-             voluptatibus aliquam totam doloribus quam.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
           </p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
+      </div>
 
-        <div class="portfolio-box">
-          <img src="./images/portfolio-4.png" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-               voluptatibus aliquam totam doloribus quam.
-            </p>
-            <a href="#"><i class='bx bx-link-external'></i></a>
-          </div>
+      <div class="portfolio-box">
+        <img src="./images/portfolio-2.png" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
 
-          <div class="portfolio-box">
-            <img src="./images/portfolio-5.png" alt="">
-            <div class="portfolio-layer">
-              <h4>Web Design</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-                 voluptatibus aliquam totam doloribus quam.
-              </p>
-              <a href="#"><i class='bx bx-link-external'></i></a>
-            </div>
+      <div class="portfolio-box">
+        <img src="./images/portfolio-3.png" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
 
-            <div class="portfolio-box">
-              <img src="./images/portfolio-6.png" alt="">
-              <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis
-                   voluptatibus aliquam totam doloribus quam.
-                </p>
-                <a href="#"><i class='bx bx-link-external'></i></a>
-              </div>
+      <div class="portfolio-box">
+        <img src="./images/portfolio-4.png" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="./images/portfolio-5.png" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="./images/portfolio-6.png" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            laboriosam assumenda minus illum ea voluptatibus?
+          </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+
     </div>
-   </div>
+  </section>
 
   <!-- contact section design -->
   <section class="contact" id="id">
@@ -204,6 +217,14 @@
   </section>
 
   <!-- footer design -->
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyright &copy; 2024 by Your Name | All Rights Reserved.</p>
+    </div>
+    <div class="footer-iconTop">
+      <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
+  </footer>
 
   <!-- scroll reveal -->
   <script src="https://unpkg.com/scrollreveal"></script>
