feat: centering elements in body

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="home-content">
       <h3>Hello it's me</h3>
       <h1>Mike Nims</h1>
-      <h3>And I'm a <span>frontend Engineer</span></h3>
+      <h3>And I'm a <span class="multiple-text">Frontend Engineer</span></h3>
       <p>
         Lorem, ipsum dolor sit amet consectetur
         adipisicing elit. Eaque nihil id at soluta, 
@@ -233,7 +233,7 @@
 
   <!-- custom js -->
   <script src="./js/app.js"></script>
-  <
+  
 </body>
 
 </html>
