--- a/index.html
+++ b/index.html
@@ -1,239 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
+    <!-- box icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal Portfolio</title>
-  <!-- box icons -->
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- custom css -->
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <!-- header design -->
+    <header class="header">
+      <a href="#" class="logo">Portfolio</a>
+      <i class="bx bx-menu" id="menu-icon"></i>
+      <nav class="navbar">
+        <!-- total of 5 a tags -->
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-  <!-- custom css -->
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-  <!-- header design -->
-   <header class="header"> 
-    <a href="#" class="logo">PortFolio</a>
-    <i class="bx bx-menu" id=""menu-icon></i>
-  
-    <nav class="navbar"></a>
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">PortFolio</a>
-      <a href="#contact">Contacts</a>
-    </nav>
-  </header> 
-  <!-- home section design -->
-  <!-- <secttion class="home" id="home"> -->
-    <div class="home-content">
-      <h3>Hello it's me</h3>
-      <h1>Mike Nims</h1>
-      <h3>And I'm a <span class="multiple-text">Frontend Engineer</span></h3>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur
-        adipisicing elit. Eaque nihil id at soluta, 
-        illum sequi. Maxime, rem.
-      </p>
-      <div class ="social-media">
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <a href="#" class="btn">Download CV</a>
-    </div>
-    <div class="home-img">
-      <img src="./images/personal-portfolio-pic.png" alt="">
-      
-    </div>
-  </secttion>
-
-  <!-- about section design -->
-  <section class="about" id="about">
-    <div class="about-img">
-      <img src="./images/personal-portfolio-pic.png" alt="" />
-    </div>
-
-    <div class="about-content">
-      <h2 class="heading">About <span>Me</span></h2>
-      <h3>Frontend Engineer</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
-        dolorum est aspernatur recusandae ea voluptatibus odit doloremque
-        voluptatum, dolorem voluptas laborum error alias veniam reiciendis
-        esse eum. Ex, tempora minima vero maxime sit, enim beatae consectetur
-        dolor voluptates eos in blanditiis. Id quam dolorem laborum cumque,
-        maxime eos consequatur adipisci quasi voluptatem, libero eaque maiores
-        voluptatibus quas mollitia atque iusto, quod aspernatur unde possimus.
-        Eum sint animi recusandae numquam!
-      </p>
-      <a href="#" class="btn">Read More</a>
-    </div>
-  </section>
-
-  <!-- services section design -->
-  <section class="services" id="services">
-    <h2 class="heading">Our <span>Services</span></h2>
-
-    <div class="services-container">
-      <div class="services-box">
-        <i class="bx bx-code-alt"></i>
-        <h3>Web Development</h3>
+    <!-- home section design -->
+    <section class="home" id="home">
+      <div class="home-content">
+        <h3>Hello, My name is</h3>
+        <h1>Mike Nims</h1>
+        <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
-          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
-          molestias quod, asperiores excepturi eligendi eum voluptate!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni beatae
+          asperiores, ea expedita necessitatibus nulla voluptatibus blanditiis.
+        </p>
+        <div class="social-media">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+        </div>
+        <a href="#" class="btn">Download CV</a>
+      </div>
+
+      <div class="home-img">
+        <img src="./images/personal-portfolio-pic.png" alt="" />
+      </div>
+    </section>
+
+    <!-- about section design -->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="./images/personal-portfolio-pic.png" alt="" />
+      </div>
+
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Frontend Engineer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
+          dolorum est aspernatur recusandae ea voluptatibus odit doloremque
+          voluptatum, dolorem voluptas laborum error alias veniam reiciendis
+          esse eum. Ex, tempora minima vero maxime sit, enim beatae consectetur
+          dolor voluptates eos in blanditiis. Id quam dolorem laborum cumque,
+          maxime eos consequatur adipisci quasi voluptatem, libero eaque maiores
+          voluptatibus quas mollitia atque iusto, quod aspernatur unde possimus.
+          Eum sint animi recusandae numquam!
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
+    </section>
 
-      <div class="services-box">
-        <i class='bx bxs-paint' ></i>
-        <h3>Graphic Design</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
-          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
-          molestias quod, asperiores excepturi eligendi eum voluptate!
-        </p>
-        <a href="#" class="btn">Read More</a>
-      </div>
+    <!-- services section design -->
+    <section class="services" id="services">
+      <h2 class="heading">Our <span>Services</span></h2>
 
-      <div class="services-box">
-        <i class='bx bx-code-block' ></i>
-        <h3>Digital Marketing</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
-          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
-          molestias quod, asperiores excepturi eligendi eum voluptate!
-        </p>
-        <a href="#" class="btn">Read More</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- portfolio section design -->
-  <section class="portfolio" id="portfolio">
-    <h2 class="heading">Latest <span>Projects</span></h2>
-
-    <div class="portfolio-container">
-
-      <div class="portfolio-box">
-        <img src="./images/portfolio-1.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+            illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+            molestias quod, asperiores excepturi eligendi eum voluptate!
           </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bxs-paint"></i>
+          <h3>Graphic Design</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+            illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+            molestias quod, asperiores excepturi eligendi eum voluptate!
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-code-block"></i>
+          <h3>Digital Marketing</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+            illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+            molestias quod, asperiores excepturi eligendi eum voluptate!
+          </p>
+          <a href="#" class="btn">Read More</a>
         </div>
       </div>
+    </section>
+    <!-- portfolio section design -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Projects</span></h2>
 
-      <div class="portfolio-box">
-        <img src="./images/portfolio-2.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
-          </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+      <div class="portfolio-container">
+
+        <div class="portfolio-box">
+          <img src="./images/portfolio-1.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
-      </div>
 
-      <div class="portfolio-box">
-        <img src="./images/portfolio-3.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
-          </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+        <div class="portfolio-box">
+          <img src="./images/portfolio-2.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
-      </div>
 
-      <div class="portfolio-box">
-        <img src="./images/portfolio-4.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
-          </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+        <div class="portfolio-box">
+          <img src="./images/portfolio-3.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
-      </div>
 
-      <div class="portfolio-box">
-        <img src="./images/portfolio-5.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
-          </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+        <div class="portfolio-box">
+          <img src="./images/portfolio-4.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
-      </div>
 
-      <div class="portfolio-box">
-        <img src="./images/portfolio-6.png" alt="" />
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            laboriosam assumenda minus illum ea voluptatibus?
-          </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+        <div class="portfolio-box">
+          <img src="./images/portfolio-5.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
         </div>
+
+        <div class="portfolio-box">
+          <img src="./images/portfolio-6.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              laboriosam assumenda minus illum ea voluptatibus?
+            </p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
       </div>
+    </section>
 
-    </div>
-  </section>
+    <!-- contact section design -->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span>Me!</span></h2>
 
-  <!-- contact section design -->
-  <section class="contact" id="id">
-    <h2 class="heading">Contact Me!</h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" name="" id="" placeholder="Full Name">
+          <input type="email" name="" id="" placeholder="Email Address">
+        </div>
+        <div class="input-box">
+          <input type="number" name="" id="" placeholder="Mobile Number">
+          <input type="text" name="" id="" placeholder="Email Subject">
+        </div>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <input type="submit" value="Send Message" class="btn">
+      </form>
+    </section>
 
-    <form action="#">
-      <div class="input-box">
-        <input type="text" name ="" id="" placeholder="Full Name">
-        <input type="text" name ="" id="" placeholder="Email Address">
+    <!-- footer design -->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 by Your Name | All Rights Reserved.</p>
       </div>
-
-      <div class="input-box">
-        <input type="text" name ="" id="" placeholder="Cell Number">
-        <input type="text" name ="" id="" placeholder="Email Subject">
+      <div class="footer-iconTop">
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </div>
-      <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
-      input 
-      <input type="text" class="btn">
-    </form>
-    </form>
-  </section>
+    </footer>
 
-  <!-- footer design -->
-  <footer class="footer">
-    <div class="footer-text">
-      <p>Copyright &copy; 2024 by Your Name | All Rights Reserved.</p>
-    </div>
-    <div class="footer-iconTop">
-      <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-    </div>
-  </footer>
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
-  <!-- scroll reveal -->
- <script src="https://unpkg.com/scrollreveal"></script>
-  <!-- typed js -->
-  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <!-- typed js -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-  <!-- custom js -->
-  <script src="./js/app.js"></script>
-  
-</body>
-
+    <!-- custom js -->
+    <script src="./js/app.js"></script>
+  </body>
 </html>
