--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header class="header">
       <a href="#" class="logo">Portfolio</a>
       <i class="bx bx-menu" id="menu-icon"></i>
+
       <nav class="navbar">
         <!-- total of 5 a tags -->
         <a href="#home" class="active">Home</a>
@@ -132,7 +133,7 @@
           </div>
         </div>
 
-        <div class="portfolio-box">
+        <div class="portfolio-box" id="portfolio-2">
           <img src="./images/portfolio-2.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
