--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       </div>
 
       <div class="home-img">
-        <img src="./images/personal-portfolio-pic.png" alt="" />
+        <img src="./images/sunrise_hands_out_2.png" alt="" />
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./images/personal-portfolio-pic.png" alt="" />
+        <img src="./images/sunrise_hands_out_2.png" alt="" />
       </div>
 
       <div class="about-content">
@@ -122,7 +122,7 @@
       <div class="portfolio-container">
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-1.png" alt="" />
+          <img src="./images/Google_Earth_Engine_app.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="portfolio-box" id="portfolio-2">
-          <img src="./images/portfolio-2.png" alt="" />
+          <img src="./images/Covid-19_graph.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-3.png" alt="" />
+          <img src="./images/AVG_SST_F.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -158,7 +158,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-4.png" alt="" />
+          <img src="./images/Covid_graphs.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -170,7 +170,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-5.png" alt="" />
+          <img src="./images/Parks_and_inequality_results.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -182,7 +182,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-6.png" alt="" />
+          <img src="./images/High_crime_food_insecure.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
