--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Frontend Engineer</h3>
+        <h3>Geospatial Engineer</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
           dolorum est aspernatur recusandae ea voluptatibus odit doloremque
@@ -93,8 +93,8 @@
         </div>
 
         <div class="services-box">
-          <i class="bx bxs-paint"></i>
-          <h3>Graphic Design</h3>
+          <i class='bx bx-shape-square'></i>
+          <h3>Photogrammetry</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
             illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -104,8 +104,8 @@
         </div>
 
         <div class="services-box">
-          <i class="bx bx-code-block"></i>
-          <h3>Digital Marketing</h3>
+          <i class='bx bxs-map-alt'></i>
+          <h3>Geospatial Analysis</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
             illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -134,7 +134,7 @@
         </div>
 
         <div class="portfolio-box" id="portfolio-2">
-          <img src="./images/Covid-19_graph.jpg" alt="" />
+          <img src="./images/Temp_variations.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -226,7 +226,7 @@
 
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
-      <h3>Frontend Engineer</h3>
+      <h3>Geospatial Engineer</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
         dolorum est aspernatur recusandae ea voluptatibus odit doloremque
@@ -245,7 +245,6 @@
   <section class="services" id="services">
     <h2 class="heading">Our <span>Services</span></h2>
 
-<<<<<<< HEAD
     <div class="services-container">
       <div class="services-box">
         <i class="bx bx-code-alt"></i>
@@ -259,8 +258,8 @@
       </div>
 
       <div class="services-box">
-        <i class='bx bxs-paint' ></i>
-        <h3>Graphic Design</h3>
+        <i class='bx bx-shape-square'></i>
+        <h3>Photogrammetry</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
           illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -270,8 +269,8 @@
       </div>
 
       <div class="services-box">
-        <i class='bx bx-code-block' ></i>
-        <h3>Digital Marketing</h3>
+        <i class='bx bxs-map-alt'></i>
+        <h3>Geospatial Analysis</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
           illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -298,9 +297,4 @@
   <script src="./js/app.js"></script>
 </body>
 
-=======
-    <!-- custom js -->
-    <script src="./js/app.js"></script>
-  </body>
->>>>>>> mike
 </html>
