--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <h1>Mike Nims</h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni beatae
-          asperiores, ea expedita necessitatibus nulla voluptatibus blanditiis.
+          I offer a wide arnge of services, from data analysis, to web development, to photogrammetry.
         </p>
         <div class="social-media">
           <a href="#"><i class="bx bxl-facebook"></i></a>
@@ -66,14 +65,10 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Geospatial Engineer</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
-          dolorum est aspernatur recusandae ea voluptatibus odit doloremque
-          voluptatum, dolorem voluptas laborum error alias veniam reiciendis
-          esse eum. Ex, tempora minima vero maxime sit, enim beatae consectetur
-          dolor voluptates eos in blanditiis. Id quam dolorem laborum cumque,
-          maxime eos consequatur adipisci quasi voluptatem, libero eaque maiores
-          voluptatibus quas mollitia atque iusto, quod aspernatur unde possimus.
-          Eum sint animi recusandae numquam!
+          I am a skilled professional analyst with seven years of experience working in government.
+          I am a capable leader, able to use critical thinking to efficiently solve complex problems
+          and achieve shared goals. I am a hard-working, dedicated, and enthusiastic employee. I excel
+          in teaching and mentoring others, fostering teamwork, and encouraging a positive work environment.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
